Revision history for {{$dist->name}}

{{$NEXT}}
          - really fix tests this time...

0.002     2014-05-13 05:03:02Z
          - fix tests that fail when ExtUtils::MakeMaker is at version 6.63_02
            or older

0.001     2014-05-10 23:04:10Z
          - Initial release.